force-app/main/default/objects/SFDC_Project__c/SFDC_Project__c.object-meta.xml
<CustomObject>
    <description>Project Management</description>
    <label>Project</label>
    <nameField>
        <displayFormat>PR-{00000}</displayFormat>
        <label>Project Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>