force-app/main/default/objects/SFDC_Project__c/fields/A_R_at_Parent_Level__c.field-meta.xml
<CustomField>
    <fullName>A_R_at_Parent_Level__c</fullName>
    <label>A/R % at Parent Level</label>
    <length>18</length>
    <type>Text</type>
</CustomField>