force-app/main/default/objects/SFDC_Project__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>R00N700000024dATEAY</relationshipName>
    <type>Lookup</type>
</CustomField>