force-app/main/default/objects/SFDC_Project__c/fields/Actual_Go_live_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Go_live_Date__c</fullName>
    <label>Actual Go-live Date</label>
    <type>Date</type>
</CustomField>