force-app/main/default/objects/SFDC_Project__c/fields/Actual_of_users__c.field-meta.xml
<CustomField>
    <fullName>Actual_of_users__c</fullName>
    <label>Actual # of users</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt;100</fullName>
            </value>
            <value>
                <fullName>101-299</fullName>
            </value>
            <value>
                <fullName>300-749</fullName>
            </value>
            <value>
                <fullName>750-1999</fullName>
            </value>
            <value>
                <fullName>2000+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>