force-app/main/default/objects/SFDC_Project__c/fields/Allowed_Budget__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Budget__c</fullName>
    <label>Allowed Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>