force-app/main/default/objects/SFDC_Project__c/fields/Business_Benefit__c.field-meta.xml
<CustomField>
    <fullName>Business_Benefit__c</fullName>
    <label>Business Benefit</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>