force-app/main/default/objects/SFDC_Project__c/fields/Catalog_Type__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Type__c</fullName>
    <label>Catalog Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Static</fullName>
            </value>
            <value>
                <fullName>Punchout Lvl 1</fullName>
            </value>
            <value>
                <fullName>Punchout Lvl 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>