force-app/main/default/objects/SFDC_Project__c/fields/CER__c.field-meta.xml
<CustomField>
    <fullName>CER__c</fullName>
    <description>Capital Expense Request Number for the Project</description>
    <label>CER #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>