force-app/main/default/objects/SFDC_Project__c/fields/CER_Details__c.field-meta.xml
<CustomField>
    <fullName>CER_Details__c</fullName>
    <label>CER Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>