force-app/main/default/objects/SFDC_Project__c/fields/Company_Goal_Impact__c.field-meta.xml
<CustomField>
    <fullName>Company_Goal_Impact__c</fullName>
    <label>Company Goal Impact</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Net Promoter Score (50)</fullName>
            </value>
            <value>
                <fullName>Employee Engagement Score (90)</fullName>
            </value>
            <value>
                <fullName>Adjusted EBITDA (1)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>