force-app/main/default/objects/SFDC_Project__c/fields/CPN_s__c.field-meta.xml
<CustomField>
    <fullName>CPN_s__c</fullName>
    <label>CPN&apos;s?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>