force-app/main/default/objects/SFDC_Project__c/fields/CS_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>CS_Email_Address__c</fullName>
    <label>CS Email Address</label>
    <length>30</length>
    <type>Text</type>
</CustomField>