force-app/main/default/objects/SFDC_Project__c/fields/Current_Method_of_Ordering__c.field-meta.xml
<CustomField>
    <fullName>Current_Method_of_Ordering__c</fullName>
    <label>Current Method of Ordering</label>
    <type>TextArea</type>
</CustomField>