force-app/main/default/objects/SFDC_Project__c/fields/Current_State__c.field-meta.xml
<CustomField>
    <fullName>Current_State__c</fullName>
    <label>Current State</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>