force-app/main/default/objects/SFDC_Project__c/fields/Customer_Impact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Impact__c</fullName>
    <label>Customer Impact</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>