force-app/main/default/objects/SFDC_Project__c/fields/Customer_Required_Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Required_Go_Live_Date__c</fullName>
    <label>Customer Required Go Live Date</label>
    <type>Date</type>
</CustomField>