force-app/main/default/objects/SFDC_Project__c/fields/Customer_System__c.field-meta.xml
<CustomField>
    <fullName>Customer_System__c</fullName>
    <label>Customer System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Actian</fullName>
            </value>
            <value>
                <fullName>Ariba</fullName>
            </value>
            <value>
                <fullName>Buyer Quest</fullName>
            </value>
            <value>
                <fullName>Coupa</fullName>
            </value>
            <value>
                <fullName>GHX</fullName>
            </value>
            <value>
                <fullName>iConnect</fullName>
            </value>
            <value>
                <fullName>Jaggaer</fullName>
            </value>
            <value>
                <fullName>MS Dynamics</fullName>
            </value>
            <value>
                <fullName>OSN</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>SPS Commerce</fullName>
            </value>
            <value>
                <fullName>Sterling</fullName>
            </value>
            <value>
                <fullName>Taulia</fullName>
            </value>
            <value>
                <fullName>Transcepta</fullName>
            </value>
            <value>
                <fullName>Tungsten</fullName>
            </value>
            <value>
                <fullName>Vroozi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>