force-app/main/default/objects/SFDC_Project__c/fields/Date_Committee_Approved__c.field-meta.xml
<CustomField>
    <fullName>Date_Committee_Approved__c</fullName>
    <label>Date Committee Approved</label>
    <type>Date</type>
</CustomField>