force-app/main/default/objects/SFDC_Project__c/fields/Dependencies__c.field-meta.xml
<CustomField>
    <fullName>Dependencies__c</fullName>
    <inlineHelpText>Estimated level of negative impacts due to NOT completing this project.  Ex. avoidance of technical debt or prevention of another project</inlineHelpText>
    <label>Dependencies</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Med</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>