force-app/main/default/objects/SFDC_Project__c/fields/Dependency_Description__c.field-meta.xml
<CustomField>
    <fullName>Dependency_Description__c</fullName>
    <inlineHelpText>If further description is needed regarding the specific dependent projects/initiatives that could be disrupted by NOT completing this project, please enter it here.</inlineHelpText>
    <label>Dependency Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>