force-app/main/default/objects/SFDC_Project__c/fields/Dependent_Project__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Project that relies on the completion of this Project</inlineHelpText>
    <label>Dependent Project</label>
    <referenceTo>SFDC_Project__c</referenceTo>
    <relationshipLabel>Project Dependencies</relationshipLabel>
    <relationshipName>Project_Dependencies</relationshipName>
    <type>Lookup</type>
</CustomField>