force-app/main/default/objects/SFDC_Project__c/fields/Details_Notes__c.field-meta.xml
<CustomField>
    <fullName>Details_Notes__c</fullName>
    <label>Details/Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>