force-app/main/default/objects/SFDC_Project__c/fields/eBusiness_Solution__c.field-meta.xml
<CustomField>
    <fullName>eBusiness_Solution__c</fullName>
    <label>eBusiness Solution</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EDI</fullName>
            </value>
            <value>
                <fullName>3rd Party Manual</fullName>
            </value>
            <value>
                <fullName>3rd Party Integration</fullName>
            </value>
            <value>
                <fullName>iConnect</fullName>
            </value>
            <value>
                <fullName>vComm</fullName>
            </value>
            <value>
                <fullName>vComm XML PO</fullName>
            </value>
            <value>
                <fullName>vComm einvoicing</fullName>
            </value>
            <value>
                <fullName>Punchout</fullName>
            </value>
            <value>
                <fullName>Smart Sync</fullName>
            </value>
            <value>
                <fullName>Training Demo</fullName>
            </value>
            <value>
                <fullName>Customer Training Documents</fullName>
            </value>
            <value>
                <fullName>Selling/Presentation</fullName>
            </value>
            <value>
                <fullName>Post Production Support</fullName>
            </value>
            <value>
                <fullName>Labels</fullName>
            </value>
            <value>
                <fullName>cXML</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>