force-app/main/default/objects/SFDC_Project__c/fields/eBusiness_Training_Docs__c.field-meta.xml
<CustomField>
    <fullName>eBusiness_Training_Docs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>eBusiness Training Docs</label>
    <type>Checkbox</type>
</CustomField>