force-app/main/default/objects/SFDC_Project__c/fields/EDI_Code__c.field-meta.xml
<CustomField>
    <fullName>EDI_Code__c</fullName>
    <label>EDI Code</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>810: Invoice</fullName>
            </value>
            <value>
                <fullName>812: Credit/Debit Adjustment</fullName>
            </value>
            <value>
                <fullName>816: Organizational Relationships</fullName>
            </value>
            <value>
                <fullName>820: Remittance Advice</fullName>
            </value>
            <value>
                <fullName>821: Financial Information Reporting</fullName>
            </value>
            <value>
                <fullName>824: Application Advice</fullName>
            </value>
            <value>
                <fullName>828: Debit Authorization</fullName>
            </value>
            <value>
                <fullName>830: Planning Schedule with Release Capability</fullName>
            </value>
            <value>
                <fullName>832: Price/Sales Catalog</fullName>
            </value>
            <value>
                <fullName>843: Response to Request for Quotation</fullName>
            </value>
            <value>
                <fullName>850: Purchase Order</fullName>
            </value>
            <value>
                <fullName>852: Product Activity Data</fullName>
            </value>
            <value>
                <fullName>855: Order Acknowledgement</fullName>
            </value>
            <value>
                <fullName>856: Advanced Shipping Notification</fullName>
            </value>
            <value>
                <fullName>858: Shipment Information</fullName>
            </value>
            <value>
                <fullName>860: Purchase Order Change</fullName>
            </value>
            <value>
                <fullName>861: Receiving Advice/Acceptance Certificate</fullName>
            </value>
            <value>
                <fullName>862: Shipping Schedule</fullName>
            </value>
            <value>
                <fullName>864: Text Message</fullName>
            </value>
            <value>
                <fullName>875: Grocery Purchase Order</fullName>
            </value>
            <value>
                <fullName>880: Grocery Invoice</fullName>
            </value>
            <value>
                <fullName>940: Warehouse Shipping Order</fullName>
            </value>
            <value>
                <fullName>943: Warehouse Stock Transfer Shipment Advice</fullName>
            </value>
            <value>
                <fullName>944: Warehouse Stock Transfer Receipt Advice</fullName>
            </value>
            <value>
                <fullName>945: Warehouse Shipping Advice</fullName>
            </value>
            <value>
                <fullName>997: Functional Acknowledgement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>