force-app/main/default/objects/SFDC_Project__c/fields/eSales_Tracking__c.field-meta.xml
<CustomField>
    <fullName>eSales_Tracking__c</fullName>
    <label>eSales Tracking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>