force-app/main/default/objects/SFDC_Project__c/fields/EVA__c.field-meta.xml
<CustomField>
    <fullName>EVA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EVA</label>
    <type>Checkbox</type>
</CustomField>