force-app/main/default/objects/SFDC_Project__c/fields/Evaluated_Vendors__c.field-meta.xml
<CustomField>
    <fullName>Evaluated_Vendors__c</fullName>
    <label>Evaluated Vendors</label>
    <length>250</length>
    <type>Text</type>
</CustomField>