force-app/main/default/objects/SFDC_Project__c/fields/Expected_Go_live_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Go_live_Date__c</fullName>
    <label>Expected Go-live Date</label>
    <type>Date</type>
</CustomField>