force-app/main/default/objects/SFDC_Project__c/fields/External_Vendor_Used_Needed__c.field-meta.xml
<CustomField>
    <fullName>External_Vendor_Used_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>External Vendor Used/Needed</label>
    <type>Checkbox</type>
</CustomField>