force-app/main/default/objects/SFDC_Project__c/fields/Grainger_Contact__c.field-meta.xml
<CustomField>
    <fullName>Grainger_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grainger Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>