force-app/main/default/objects/SFDC_Project__c/fields/grainger_project_location__c.field-meta.xml
<CustomField>
    <fullName>grainger_project_location__c</fullName>
    <label>Project Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Multiple</fullName>
            </value>
            <value>
                <fullName>Denver</fullName>
            </value>
            <value>
                <fullName>Fountain Inn</fullName>
            </value>
            <value>
                <fullName>Jacksonville</fullName>
            </value>
            <value>
                <fullName>Kansas City</fullName>
            </value>
            <value>
                <fullName>Lab Safety</fullName>
            </value>
            <value>
                <fullName>Macedonia</fullName>
            </value>
            <value>
                <fullName>Mira Loma</fullName>
            </value>
            <value>
                <fullName>Niles</fullName>
            </value>
            <value>
                <fullName>Plymouth</fullName>
            </value>
            <value>
                <fullName>Roanoke</fullName>
            </value>
            <value>
                <fullName>Robbinsville</fullName>
            </value>
            <value>
                <fullName>San Jose</fullName>
            </value>
            <value>
                <fullName>South Haven</fullName>
            </value>
            <value>
                <fullName>Tukwila</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>