force-app/main/default/objects/SFDC_Project__c/fields/Gross_Sales_Annualized__c.field-meta.xml
<CustomField>
    <fullName>Gross_Sales_Annualized__c</fullName>
    <label>Gross Sales - Annualized</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>