force-app/main/default/objects/SFDC_Project__c/fields/Impact_Score__c.field-meta.xml
<CustomField>
    <fullName>Impact_Score__c</fullName>
    <formula>(
IF(ROI__c&lt;1,0,
IF(and(ROI__c&gt;=1,ROI__c&lt;25000),20,
IF(and(ROI__c&gt;=25000,ROI__c&lt;100000),40,
IF(and(ROI__c&gt;=100000,ROI__c&lt;250000),60,
IF(and(ROI__c&gt;=250000,ROI__c&lt;1000000),80,
IF(ROI__c&gt;=1000000,100,0))))))
+
IF(ISPICKVAL(Actual_of_users__c, &quot;&lt;100&quot;),20,
IF(ISPICKVAL(Actual_of_users__c, &quot;101-299&quot;),40,
IF(ISPICKVAL(Actual_of_users__c, &quot;300-749&quot;),60,
IF(ISPICKVAL(Actual_of_users__c, &quot;750-1999&quot;),80,
IF(ISPICKVAL(Actual_of_users__c, &quot;2000+&quot;),100,0)))))
+
IF(ISPICKVAL(Risk_Mitigation__c, &quot;Yes&quot;),100,
IF(ISPICKVAL(Risk_Mitigation__c, &quot;No&quot;),0,0))
+
IF(ISPICKVAL(Dependencies__c,&quot;High&quot;),100,
IF(ISPICKVAL(Dependencies__c,&quot;Low&quot;),50,
IF(ISPICKVAL(Dependencies__c,&quot;Med&quot;),0,0)))
)
/4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Impact Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>