force-app/main/default/objects/SFDC_Project__c/fields/Implementation_Management_Contact__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Management_Contact__c</fullName>
    <label>Implementation Management Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>