force-app/main/default/objects/SFDC_Project__c/fields/Implementation_Management_Email__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Management_Email__c</fullName>
    <label>Implementation Management Email</label>
    <type>Email</type>
</CustomField>