force-app/main/default/objects/SFDC_Project__c/fields/Implementation_Management_Phone__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Management_Phone__c</fullName>
    <label>Implementation Management Phone</label>
    <type>Phone</type>
</CustomField>