force-app/main/default/objects/SFDC_Project__c/fields/Integration_Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Integration_Go_Live_Date__c</fullName>
    <label>Integration Go Live Date</label>
    <type>Date</type>
</CustomField>