force-app/main/default/objects/SFDC_Project__c/fields/Is_there_a_preferred_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Is_there_a_preferred_Vendor__c</fullName>
    <label>Is there a preferred Vendor?</label>
    <length>250</length>
    <type>Text</type>
</CustomField>