force-app/main/default/objects/SFDC_Project__c/fields/IT_Impact__c.field-meta.xml
<CustomField>
    <fullName>IT_Impact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IT Impact?</label>
    <type>Checkbox</type>
</CustomField>