force-app/main/default/objects/SFDC_Project__c/fields/IT_JIRA__c.field-meta.xml
<CustomField>
    <fullName>IT_JIRA__c</fullName>
    <inlineHelpText>If a JIRA ticket number exists (Epic #), enter it here.</inlineHelpText>
    <label>IT JIRA #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>