force-app/main/default/objects/SFDC_Project__c/fields/IT_Location_Matrix__c.field-meta.xml
<CustomField>
    <fullName>IT_Location_Matrix__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IT Location Matrix</label>
    <type>Checkbox</type>
</CustomField>