force-app/main/default/objects/SFDC_Project__c/fields/IT_Project_Contacts__c.field-meta.xml
<CustomField>
    <fullName>IT_Project_Contacts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IT Project Contacts</label>
    <type>Checkbox</type>
</CustomField>