force-app/main/default/objects/SFDC_Project__c/fields/Last_Project_Weekly_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Project_Weekly_Update__c</fullName>
    <label>Last Project Weekly Update</label>
    <summarizedField>Project_Weekly_Update__c.CreatedDate</summarizedField>
    <summaryForeignKey>Project_Weekly_Update__c.Project__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>