force-app/main/default/objects/SFDC_Project__c/fields/National_Account__c.field-meta.xml
<CustomField>
    <fullName>National_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>National Account</label>
    <type>Checkbox</type>
</CustomField>