force-app/main/default/objects/SFDC_Project__c/fields/NPS_Impact__c.field-meta.xml
<CustomField>
    <fullName>NPS_Impact__c</fullName>
    <label>NPS Impact Description</label>
    <type>TextArea</type>
</CustomField>