force-app/main/default/objects/SFDC_Project__c/fields/of_days_since_committee_approved__c.field-meta.xml
<CustomField>
    <fullName>of_days_since_committee_approved__c</fullName>
    <formula>today()-Date_Committee_Approved__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of days since committee approved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>