force-app/main/default/objects/SFDC_Project__c/fields/of_days_since_creation__c.field-meta.xml
<CustomField>
    <fullName>of_days_since_creation__c</fullName>
    <formula>TODAY () - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of days since creation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>