force-app/main/default/objects/SFDC_Project__c/fields/of_Items__c.field-meta.xml
<CustomField>
    <fullName>of_Items__c</fullName>
    <label># of Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>