force-app/main/default/objects/SFDC_Project__c/fields/of_Orders_Invoices_Last_12_Months__c.field-meta.xml
<CustomField>
    <fullName>of_Orders_Invoices_Last_12_Months__c</fullName>
    <description>changed label from  &quot;#of Orders/Invoices Last 12 Months&quot; to &quot;Annualized Orders/Invoices&quot;  per Backlog:  Item - 3747</description>
    <label>Annualized Orders/Invoices</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>