force-app/main/default/objects/SFDC_Project__c/fields/Operating_Tenet_Impact__c.field-meta.xml
<CustomField>
    <fullName>Operating_Tenet_Impact__c</fullName>
    <label>Operating Tenet Impact</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Innovate and Grow</fullName>
            </value>
            <value>
                <fullName>Simplify and Speed</fullName>
            </value>
            <value>
                <fullName>Deliver and Delight</fullName>
            </value>
            <value>
                <fullName>Our People</fullName>
            </value>
            <value>
                <fullName>Financial Goals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>