force-app/main/default/objects/SFDC_Project__c/fields/Parent_Party_Number__c.field-meta.xml
<CustomField>
    <fullName>Parent_Party_Number__c</fullName>
    <description>Added for eBiz projects</description>
    <label>Parent Party Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>